--- a/css/styles.css
+++ b/css/styles.css
@@ -14,9 +14,9 @@ body {
 
 .header {
     height: 100vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/1.jpg);
+    background-image: linear-gradient(rgba(0,0,0, 0.7), rgba(0,0,0, 0.7)), url(../img/1.jpg);
     background-size: cover;
-    background-position: bottom;
+    background-position: center;
     position: relative;
 }
 
@@ -25,12 +25,13 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    text-align: center;
 }
 
 .heading-primary {
-    color: #FFF;
+    color: #F8F8F8;
     text-transform: uppercase;
-    text-align: center;
+    margin-bottom: 40px;
 }
 
 .heading-primary-main {
@@ -46,15 +47,15 @@ body {
     display: block;
     width: 100%;
     height: 2px;
-    background-color: #FFF;
+    background-color: #F8F8F8;
 }
 
 .heading-primary-sub {
     display: block;
     font-size: 20px;
-    font-weight: 400;
+    font-weight: 700;
     letter-spacing: 5px;
-    color: rgb(160, 160, 160);
+    color: #F8F8F8;
 }
 
 .main-nav {
@@ -74,7 +75,7 @@ body {
 
 .menu {
     float: right;
-    margin: 20px 40px 0px 0px;
+    margin: 20px 40px;
 }
 
 .menu li {
@@ -84,7 +85,7 @@ body {
 
 .menu li a,
 .logo-text {
-    color: #FFF;
+    color: #F8F8F8;
     text-transform: uppercase;
     letter-spacing: 3px;
     font-weight: 400;
@@ -123,7 +124,7 @@ body {
     display: block;
     width: 100%;
     height: 1px;
-    background-color: #FFF;
+    background-color: #F8F8F8;
     transform: scaleX(0);
     transform-origin: left;
     transition: transform .8s;
@@ -131,5 +132,84 @@ body {
 
 .border-underliner:hover::after {
     transform: scaleX(1);
+}
+
+.btn:link,
+.btn:visited {
+    text-decoration: none;
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 14px;
+    text-transform: uppercase;
+    border-radius: 3px;
+    letter-spacing: 2px;
+    transition: all .3s;
+    background-color: #ac1e1e;
+    opacity: .8;
+}
+
+.btn-primary {
+    color: #F8F8F8;
+    
+}
+
+.btn:hover {
+    transform: translateY(-2px);
+    opacity: 1;
+}
+
+.btn:active {
+    transform: translateY(-1px);
+}
+
+@keyframes opacityElement {
+    0% {
+        opacity: 0;
+        visibility: hidden;
+    }
+
+    100% {
+        opacity: 1;
+        visibility: visible;
+    }
+}
+
+@keyframes inFromLeft {
+    0% {
+        opacity: 0;
+        transform: translateX(-210%);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@keyframes inFromBottom {
+    0% {
+        opacity: 0;
+        transform: translateY(112px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.opacity-animated{
+    animation: opacityElement .8s ease-in .3s;
+    animation-fill-mode: backwards;
+}
+
+.in-left-animated {
+    animation: inFromLeft 1.5s ease-in .2s;
+    animation-fill-mode: backwards;
+}
+
+.in-bottom-animated {
+    animation: inFromBottom 1s ease-in .4s;
+    animation-fill-mode: backwards;
 }
 
