--- a/css/styles.css
+++ b/css/styles.css
@@ -141,7 +141,7 @@ body {
     padding: 10px 20px;
     font-size: 14px;
     text-transform: uppercase;
-    border-radius: 3px;
+    border-radius: 100px;
     letter-spacing: 2px;
     transition: all .3s;
     background-color: #ac1e1e;
@@ -150,16 +150,17 @@ body {
 
 .btn-primary {
     color: #F8F8F8;
-    
 }
 
 .btn:hover {
     transform: translateY(-2px);
     opacity: 1;
+    box-shadow: 3px 5px 0px rgba(0,0,0, .25);
 }
 
 .btn:active {
     transform: translateY(-1px);
+    box-shadow: 3px 3px 0px rgba(0,0,0, .25);
 }
 
 @keyframes opacityElement {
