--- a/css/styles.css
+++ b/css/styles.css
@@ -139,7 +139,6 @@ body {
     text-decoration: none;
     display: inline-block;
     padding: 10px 20px;
-    font-size: 14px;
     text-transform: uppercase;
     border-radius: 100px;
     letter-spacing: 2px;
@@ -155,12 +154,12 @@ body {
 .btn:hover {
     transform: translateY(-2px);
     opacity: 1;
-    box-shadow: 3px 5px 0px rgba(0,0,0, .25);
+    box-shadow: 3px 4px 0px rgba(96,0,0, 0.2);
 }
 
 .btn:active {
     transform: translateY(-1px);
-    box-shadow: 3px 3px 0px rgba(0,0,0, .25);
+    box-shadow: 3px 1px 0px rgba(96,0,0, 0.2);
 }
 
 @keyframes opacityElement {
