--- a/sass/main.scss
+++ b/sass/main.scss
@@ -33,145 +33,144 @@ body {
     background-size: cover;
     background-position: center;
     position: relative;
-}
 
-.header__main-nav {
-    position: relative;
-}
+    &__main-nav {
+        position: relative;
 
-.header__main-nav--logo-text {
-    text-align:left;
-    display: inline-block;
-    padding: 2rem 4rem;
-}
+        &--logo-text {
+            text-align:left;
+            display: inline-block;
+            padding: 2rem 4rem;
+            color: $light-grey-color;
+            text-transform: uppercase;
+            letter-spacing: .3rem;
+            font-weight: 400;
+            font-size: 1.4rem;      
+        }
 
-.header__main-nav__menu {
-    float: right;
-    margin: 2rem 4rem;
-}
+        &__menu {
+            float: right;
+            margin: 2rem 4rem;
 
-.header__main-nav__menu li a,
-.header__main-nav--logo-text {
-    color: $light-grey-color;
-    text-transform: uppercase;
-    letter-spacing: .3rem;
-    font-weight: 400;
-    font-size: 1.4rem;
-}
+            li a {
+                color: $light-grey-color;
+                text-transform: uppercase;
+                letter-spacing: .3rem;
+                font-weight: 400;
+                font-size: 1.4rem;
+                list-style: none;
+                display: inline-block;
+                opacity: .5;
+                transition: opacity .8s;
+                text-decoration: none;
+                padding: 0rem 1rem;
+            }
 
-.header__main-nav__menu li {
-    list-style: none;
-    display: inline-block;
-}
+            li a:hover {
+                opacity: 1;
+            }
 
-.header__main-nav__menu li a {
-    opacity: .5;
-    transition: opacity .8s;
-}
+            li:not(:first-child) {
+                margin-left: 2rem;
+            }
 
-.header__main-nav__menu li a:hover {
-    opacity: 1;
-}
+            &--border-underliner {
+                position: relative;
+                height: 100%;
+            }
 
-.header__main-nav__menu li a {
-    text-decoration: none;
-    padding: 0rem 1rem;
-    
-}
+            &--border-underliner::after {
+                content: "";
+                position: absolute;
+                bottom: -.8rem;
+                left: 0rem;
+                display: block;
+                width: 100%;
+                height: .1rem;
+                background-color: $light-grey-color;
+                transform: scaleX(0);
+                transform-origin: left;
+                transition: transform .8s;
+            }
 
-.header__main-nav__menu li:not(:first-child) {
-    margin-left: 2rem;
-}
+            &--border-underliner:hover::after {
+                transform: scaleX(1);
+            }
+        }
 
-.header__main-nav__menu--border-underliner {
-    position: relative;
-    height: 100%;
-}
+    }
 
-.header__main-nav__menu--border-underliner::after {
-    content: "";
-    position: absolute;
-    bottom: -.8rem;
-    left: 0rem;
-    display: block;
-    width: 100%;
-    height: .1rem;
-    background-color: $light-grey-color;
-    transform: scaleX(0);
-    transform-origin: left;
-    transition: transform .8s;
-}
-
-.header__main-nav__menu--border-underliner:hover::after {
-    transform: scaleX(1);
-}
-
-.header__text-box {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
+    &__text-box {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+    }
 }
 
 .heading-primary {
     color: $light-grey-color;
     text-transform: uppercase;
     margin-bottom: 4rem;
+
+    &--main {
+        display: block;
+        font-size: 5rem;
+        font-weight: 700;
+        letter-spacing: 1rem;
+        padding-bottom: 2rem;
+    }
+
+    &--main::after {
+        content: "";
+        display: block;
+        width: 100%;
+        height: .2rem;
+        background-color:$light-grey-color;
+    }
+
+    &--sub {
+        display: block;
+        font-size: 2rem;
+        font-weight: 700;
+        letter-spacing: .5rem;
+        color: $light-grey-color;
+    }
 }
 
-.heading-primary--main {
-    display: block;
-    font-size: 5rem;
-    font-weight: 700;
-    letter-spacing: 1rem;
-    padding-bottom: 2rem;
+.btn { 
+    &:link,
+    &:visited {
+        text-decoration: none;
+        font-size: 1.4rem;
+        display: inline-block;
+        padding: 1rem 2rem;
+        text-transform: uppercase;
+        border-radius: 10rem;
+        letter-spacing: .2rem;
+        transition: all .3s;
+        background-color: $dark-red-wine-color;
+        opacity: .8;
+    }
+    
+    &--primary {
+        color: $light-grey-color;
+    }
+    
+    &:hover {
+        transform: translateY(-.2rem);
+        opacity: 1;
+        box-shadow: .3rem .4rem 0rem rgba($dark-red-wine-color, 0.2);
+    }
+    
+    &:active {
+        transform: translateY(-.1rem);
+        box-shadow: .3rem .1rem 0rem rgba($dark-red-wine-color, 0.2);
+    }    
 }
 
-.heading-primary--main::after {
-    content: "";
-    display: block;
-    width: 100%;
-    height: .2rem;
-    background-color:$light-grey-color;
-}
 
-.heading-primary--sub {
-    display: block;
-    font-size: 2rem;
-    font-weight: 700;
-    letter-spacing: .5rem;
-    color: $light-grey-color;
-}
-
-.btn:link,
-.btn:visited {
-    text-decoration: none;
-    font-size: 1.4rem;
-    display: inline-block;
-    padding: 1rem 2rem;
-    text-transform: uppercase;
-    border-radius: 10rem;
-    letter-spacing: .2rem;
-    transition: all .3s;
-    background-color: $dark-red-wine-color;
-    opacity: .8;
-}
-
-.btn--primary {
-    color: $light-grey-color;
-}
-
-.btn:hover {
-    transform: translateY(-.2rem);
-    opacity: 1;
-    box-shadow: .3rem .4rem 0rem rgba($dark-red-wine-color, 0.2);
-}
-
-.btn:active {
-    transform: translateY(-.1rem);
-    box-shadow: .3rem .1rem 0rem rgba($dark-red-wine-color, 0.2);
-}
 
 @keyframes opacityElement {
     0% {
