--- a/css/style.css
+++ b/css/style.css
@@ -21,100 +21,85 @@ body {
   background-size: cover;
   background-position: center;
   position: relative; }
-
-.header__main-nav {
-  position: relative; }
-
-.header__main-nav--logo-text {
-  text-align: left;
-  display: inline-block;
-  padding: 2rem 4rem; }
-
-.header__main-nav__menu {
-  float: right;
-  margin: 2rem 4rem; }
-
-.header__main-nav__menu li a,
-.header__main-nav--logo-text {
-  color: #F8F8F8;
-  text-transform: uppercase;
-  letter-spacing: .3rem;
-  font-weight: 400;
-  font-size: 1.4rem; }
-
-.header__main-nav__menu li {
-  list-style: none;
-  display: inline-block; }
-
-.header__main-nav__menu li a {
-  opacity: .5;
-  transition: opacity .8s; }
-
-.header__main-nav__menu li a:hover {
-  opacity: 1; }
-
-.header__main-nav__menu li a {
-  text-decoration: none;
-  padding: 0rem 1rem; }
-
-.header__main-nav__menu li:not(:first-child) {
-  margin-left: 2rem; }
-
-.header__main-nav__menu--border-underliner {
-  position: relative;
-  height: 100%; }
-
-.header__main-nav__menu--border-underliner::after {
-  content: "";
-  position: absolute;
-  bottom: -.8rem;
-  left: 0rem;
-  display: block;
-  width: 100%;
-  height: .1rem;
-  background-color: #F8F8F8;
-  transform: scaleX(0);
-  transform-origin: left;
-  transition: transform .8s; }
-
-.header__main-nav__menu--border-underliner:hover::after {
-  transform: scaleX(1); }
-
-.header__text-box {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center; }
+  .header__main-nav {
+    position: relative; }
+    .header__main-nav--logo-text {
+      text-align: left;
+      display: inline-block;
+      padding: 2rem 4rem;
+      color: #F8F8F8;
+      text-transform: uppercase;
+      letter-spacing: .3rem;
+      font-weight: 400;
+      font-size: 1.4rem; }
+    .header__main-nav__menu {
+      float: right;
+      margin: 2rem 4rem; }
+      .header__main-nav__menu li {
+        list-style: none;
+        display: inline-block; }
+        .header__main-nav__menu li a {
+          color: #F8F8F8;
+          text-transform: uppercase;
+          letter-spacing: .3rem;
+          font-weight: 400;
+          font-size: 1.4rem;
+          opacity: .5;
+          transition: opacity .8s;
+          text-decoration: none;
+          padding: 0rem 1rem; }
+      .header__main-nav__menu li a:hover {
+        opacity: 1; }
+      .header__main-nav__menu li:not(:first-child) {
+        margin-left: 2rem; }
+      .header__main-nav__menu--border-underliner {
+        position: relative;
+        height: 100%; }
+      .header__main-nav__menu--border-underliner::after {
+        content: "";
+        position: absolute;
+        bottom: -.8rem;
+        left: 0rem;
+        display: block;
+        width: 100%;
+        height: .1rem;
+        background-color: #F8F8F8;
+        transform: scaleX(0);
+        transform-origin: left;
+        transition: transform .8s; }
+      .header__main-nav__menu--border-underliner:hover::after {
+        transform: scaleX(1); }
+  .header__text-box {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center; }
 
 .heading-primary {
   color: #F8F8F8;
   text-transform: uppercase;
   margin-bottom: 4rem; }
+  .heading-primary--main {
+    display: block;
+    font-size: 5rem;
+    font-weight: 700;
+    letter-spacing: 1rem;
+    padding-bottom: 2rem; }
+  .heading-primary--main::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: .2rem;
+    background-color: #F8F8F8; }
+  .heading-primary--sub {
+    display: block;
+    font-size: 2rem;
+    font-weight: 700;
+    letter-spacing: .5rem;
+    color: #F8F8F8; }
 
-.heading-primary--main {
-  display: block;
-  font-size: 5rem;
-  font-weight: 700;
-  letter-spacing: 1rem;
-  padding-bottom: 2rem; }
-
-.heading-primary--main::after {
-  content: "";
-  display: block;
-  width: 100%;
-  height: .2rem;
-  background-color: #F8F8F8; }
-
-.heading-primary--sub {
-  display: block;
-  font-size: 2rem;
-  font-weight: 700;
-  letter-spacing: .5rem;
-  color: #F8F8F8; }
-
-.btn:link,
-.btn:visited {
+.btn:link, .btn:visited {
   text-decoration: none;
   font-size: 1.4rem;
   display: inline-block;
