--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,10 +1,14 @@
-// Variables
+// Imports
+@import "abstracts/functions";
+@import "abstracts/mixins";
+@import "abstracts/variables";
 
-$base-color: #777;
-$black-color: #000;
-$light-grey-color: #F8F8F8;
-$medium-red-wine-color: #ac1e1e;
-$dark-red-wine-color: #600000;
+@import "base/base";
+@import "base/animations";
+@import "base/typography";
+@import "base/utilities";
+
+@import "pages/home";
 
 *,
 *::after,
@@ -51,26 +55,29 @@ body {
         &__menu {
             float: right;
             margin: 2rem 4rem;
-
-            li a {
-                color: $light-grey-color;
-                text-transform: uppercase;
-                letter-spacing: .3rem;
-                font-weight: 400;
-                font-size: 1.4rem;
+            
+            & li {
                 list-style: none;
                 display: inline-block;
-                opacity: .5;
-                transition: opacity .8s;
-                text-decoration: none;
-                padding: 0rem 1rem;
+                
+                & a {
+                    color: $light-grey-color;
+                    text-transform: uppercase;
+                    letter-spacing: .3rem;
+                    font-weight: 400;
+                    font-size: 1.4rem;
+                    opacity: .5;
+                    transition: opacity .8s;
+                    text-decoration: none;
+                    padding: 0rem 1rem;
+                }
             }
 
-            li a:hover {
+            & li a:hover {
                 opacity: 1;
             }
 
-            li:not(:first-child) {
+            & li:not(:first-child) {
                 margin-left: 2rem;
             }
 
