UPDATE Structuring the project and creating a good grid system

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,5 +1,12 @@
+
+// COLORS
 $base-color: #777;
 $black-color: #000;
 $light-grey-color: #F8F8F8;
 $medium-red-wine-color: #ac1e1e;
 $dark-red-wine-color: #600000;
+
+// GRID
+$grid-width: 114rem;
+$gutter-vertical: 8rem;
+$gutter-horizontal: 6rem;
