--- a/css/style.css
+++ b/css/style.css
@@ -9,11 +9,92 @@ html {
   font-size: 62.5%; }
 
 body {
+  box-sizing: border-box; }
+
+@keyframes opacityElement {
+  0% {
+    opacity: 0;
+    visibility: hidden; }
+  100% {
+    opacity: 1;
+    visibility: visible; } }
+
+@keyframes inFromLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-210%); }
+  100% {
+    opacity: 1;
+    transform: translateX(0); } }
+
+@keyframes inFromBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(11.2rem); }
+  100% {
+    opacity: 1;
+    transform: translateY(0); } }
+
+body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
   line-height: 1.7;
   color: #777;
   box-sizing: border-box; }
+
+.heading-primary {
+  color: #F8F8F8;
+  text-transform: uppercase;
+  margin-bottom: 4rem; }
+  .heading-primary--in-left-animated {
+    animation: inFromLeft 1.5s ease-in .2s;
+    animation-fill-mode: backwards; }
+  .heading-primary--main {
+    display: block;
+    font-size: 5rem;
+    font-weight: 700;
+    letter-spacing: 1rem;
+    padding-bottom: 2rem; }
+  .heading-primary--main::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: .2rem;
+    background-color: #F8F8F8; }
+  .heading-primary--sub {
+    display: block;
+    font-size: 2rem;
+    font-weight: 700;
+    letter-spacing: .5rem;
+    color: #F8F8F8; }
+
+.btn:link, .btn:visited {
+  text-decoration: none;
+  font-size: 1.4rem;
+  display: inline-block;
+  padding: 1rem 2rem;
+  text-transform: uppercase;
+  border-radius: 10rem;
+  letter-spacing: .2rem;
+  transition: all .3s;
+  background-color: #600000;
+  opacity: .8; }
+
+.btn--in-bottom-animated {
+  animation: inFromBottom 1s ease-in .4s;
+  animation-fill-mode: backwards; }
+
+.btn--primary {
+  color: #F8F8F8; }
+
+.btn:hover {
+  transform: translateY(-0.2rem);
+  opacity: 1;
+  box-shadow: 0.3rem 0.4rem 0rem rgba(96, 0, 0, 0.2); }
+
+.btn:active {
+  transform: translateY(-0.1rem);
+  box-shadow: 0.3rem 0.1rem 0rem rgba(96, 0, 0, 0.2); }
 
 .header {
   height: 100vh;
@@ -21,6 +102,9 @@ body {
   background-size: cover;
   background-position: center;
   position: relative; }
+  .header--opacity-animated {
+    animation: opacityElement .8s ease-in .3s;
+    animation-fill-mode: backwards; }
   .header__main-nav {
     position: relative; }
     .header__main-nav--logo-text {
@@ -76,85 +160,28 @@ body {
     transform: translate(-50%, -50%);
     text-align: center; }
 
-.heading-primary {
-  color: #F8F8F8;
-  text-transform: uppercase;
-  margin-bottom: 4rem; }
-  .heading-primary--main {
-    display: block;
-    font-size: 5rem;
-    font-weight: 700;
-    letter-spacing: 1rem;
-    padding-bottom: 2rem; }
-  .heading-primary--main::after {
+.row {
+  max-width: 114rem;
+  margin: 0 auto; }
+  .row::after {
     content: "";
-    display: block;
-    width: 100%;
-    height: .2rem;
-    background-color: #F8F8F8; }
-  .heading-primary--sub {
-    display: block;
-    font-size: 2rem;
-    font-weight: 700;
-    letter-spacing: .5rem;
-    color: #F8F8F8; }
-
-.btn:link, .btn:visited {
-  text-decoration: none;
-  font-size: 1.4rem;
-  display: inline-block;
-  padding: 1rem 2rem;
-  text-transform: uppercase;
-  border-radius: 10rem;
-  letter-spacing: .2rem;
-  transition: all .3s;
-  background-color: #600000;
-  opacity: .8; }
-
-.btn--primary {
-  color: #F8F8F8; }
-
-.btn:hover {
-  transform: translateY(-0.2rem);
-  opacity: 1;
-  box-shadow: 0.3rem 0.4rem 0rem rgba(96, 0, 0, 0.2); }
-
-.btn:active {
-  transform: translateY(-0.1rem);
-  box-shadow: 0.3rem 0.1rem 0rem rgba(96, 0, 0, 0.2); }
-
-@keyframes opacityElement {
-  0% {
-    opacity: 0;
-    visibility: hidden; }
-  100% {
-    opacity: 1;
-    visibility: visible; } }
-
-@keyframes inFromLeft {
-  0% {
-    opacity: 0;
-    transform: translateX(-210%); }
-  100% {
-    opacity: 1;
-    transform: translateX(0); } }
-
-@keyframes inFromBottom {
-  0% {
-    opacity: 0;
-    transform: translateY(11.2rem); }
-  100% {
-    opacity: 1;
-    transform: translateY(0); } }
-
-.opacity-animated {
-  animation: opacityElement .8s ease-in .3s;
-  animation-fill-mode: backwards; }
-
-.in-left-animated {
-  animation: inFromLeft 1.5s ease-in .2s;
-  animation-fill-mode: backwards; }
-
-.in-bottom-animated {
-  animation: inFromBottom 1s ease-in .4s;
-  animation-fill-mode: backwards; }
+    display: table;
+    clear: both; }
+  .row:not(:last-child) {
+    margin-bottom: 8rem; }
+  .row [class^="col-"] {
+    float: left; }
+    .row [class^="col-"]:not(:last-child) {
+      margin-right: 6rem; }
+  .row .col-1-of-2 {
+    width: calc((100% - 6rem) / 2); }
+  .row .col-1-of-3 {
+    width: calc((100% - (6rem)*2) / 3); }
+  .row .col-2-of-3 {
+    width: calc(2 * ((100% - (6rem)*2)) / 3 + 6rem); }
+  .row .col-1-of-4 {
+    width: calc((100% - (6rem)*3) / 4); }
+  .row .col-3-of-4 {
+    width: calc(3 * ((100% - (6rem)*3)) / 4 + 2 * 6rem); }
+  .row .col-2-of-4 {
+    width: calc(2 * ((100% - (6rem)*3) / 4) + 6rem); }
