--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,225 +8,9 @@
 @import "base/typography";
 @import "base/utilities";
 
+@import "components/button";
+
+@import "layout/header";
+@import "layout/grid";
+
 @import "pages/home";
-
-*,
-*::after,
-*::before {
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
-}
-
-html {
-    font-size: 62.5%;
-}
-
-body {
-    //font-size: 16px;
-    font-family: "Lato", sans-serif;
-    font-weight: 400;
-    line-height: 1.7;
-    color: $base-color;
-    box-sizing: border-box;
-}
-
-.header {
-    height: 100vh;
-    background-image: linear-gradient(rgba($black-color, 0.7), rgba($black-color, 0.7)), url(../img/1.jpg);
-    background-size: cover;
-    background-position: center;
-    position: relative;
-
-    &__main-nav {
-        position: relative;
-
-        &--logo-text {
-            text-align:left;
-            display: inline-block;
-            padding: 2rem 4rem;
-            color: $light-grey-color;
-            text-transform: uppercase;
-            letter-spacing: .3rem;
-            font-weight: 400;
-            font-size: 1.4rem;      
-        }
-
-        &__menu {
-            float: right;
-            margin: 2rem 4rem;
-            
-            & li {
-                list-style: none;
-                display: inline-block;
-                
-                & a {
-                    color: $light-grey-color;
-                    text-transform: uppercase;
-                    letter-spacing: .3rem;
-                    font-weight: 400;
-                    font-size: 1.4rem;
-                    opacity: .5;
-                    transition: opacity .8s;
-                    text-decoration: none;
-                    padding: 0rem 1rem;
-                }
-            }
-
-            & li a:hover {
-                opacity: 1;
-            }
-
-            & li:not(:first-child) {
-                margin-left: 2rem;
-            }
-
-            &--border-underliner {
-                position: relative;
-                height: 100%;
-            }
-
-            &--border-underliner::after {
-                content: "";
-                position: absolute;
-                bottom: -.8rem;
-                left: 0rem;
-                display: block;
-                width: 100%;
-                height: .1rem;
-                background-color: $light-grey-color;
-                transform: scaleX(0);
-                transform-origin: left;
-                transition: transform .8s;
-            }
-
-            &--border-underliner:hover::after {
-                transform: scaleX(1);
-            }
-        }
-
-    }
-
-    &__text-box {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        text-align: center;
-    }
-}
-
-.heading-primary {
-    color: $light-grey-color;
-    text-transform: uppercase;
-    margin-bottom: 4rem;
-
-    &--main {
-        display: block;
-        font-size: 5rem;
-        font-weight: 700;
-        letter-spacing: 1rem;
-        padding-bottom: 2rem;
-    }
-
-    &--main::after {
-        content: "";
-        display: block;
-        width: 100%;
-        height: .2rem;
-        background-color:$light-grey-color;
-    }
-
-    &--sub {
-        display: block;
-        font-size: 2rem;
-        font-weight: 700;
-        letter-spacing: .5rem;
-        color: $light-grey-color;
-    }
-}
-
-.btn { 
-    &:link,
-    &:visited {
-        text-decoration: none;
-        font-size: 1.4rem;
-        display: inline-block;
-        padding: 1rem 2rem;
-        text-transform: uppercase;
-        border-radius: 10rem;
-        letter-spacing: .2rem;
-        transition: all .3s;
-        background-color: $dark-red-wine-color;
-        opacity: .8;
-    }
-    
-    &--primary {
-        color: $light-grey-color;
-    }
-    
-    &:hover {
-        transform: translateY(-.2rem);
-        opacity: 1;
-        box-shadow: .3rem .4rem 0rem rgba($dark-red-wine-color, 0.2);
-    }
-    
-    &:active {
-        transform: translateY(-.1rem);
-        box-shadow: .3rem .1rem 0rem rgba($dark-red-wine-color, 0.2);
-    }    
-}
-
-
-
-@keyframes opacityElement {
-    0% {
-        opacity: 0;
-        visibility: hidden;
-    }
-
-    100% {
-        opacity: 1;
-        visibility: visible;
-    }
-}
-
-@keyframes inFromLeft {
-    0% {
-        opacity: 0;
-        transform: translateX(-210%);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translateX(0);
-    }
-}
-
-@keyframes inFromBottom {
-    0% {
-        opacity: 0;
-        transform: translateY(11.2rem);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-
-.opacity-animated{
-    animation: opacityElement .8s ease-in .3s;
-    animation-fill-mode: backwards;
-}
-
-.in-left-animated {
-    animation: inFromLeft 1.5s ease-in .2s;
-    animation-fill-mode: backwards;
-}
-
-.in-bottom-animated {
-    animation: inFromBottom 1s ease-in .4s;
-    animation-fill-mode: backwards;
-}
-
