ADD building about-section

--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,24 @@ body {
     letter-spacing: .5rem;
     color: #F8F8F8; }
 
+.heading-secondary {
+  font-size: 2rem;
+  margin: 0 auto;
+  color: #414141;
+  text-transform: uppercase;
+  text-align: center;
+  font-weight: 400;
+  letter-spacing: .5rem;
+  padding-top: 4rem; }
+  .heading-secondary::after {
+    content: "";
+    height: .2rem;
+    display: block;
+    margin: 0 auto;
+    margin-top: 1rem;
+    width: 8rem;
+    background-color: #ac1e1e; }
+
 .btn:link, .btn:visited {
   text-decoration: none;
   font-size: 1.4rem;
@@ -185,3 +203,7 @@ body {
     width: calc(3 * ((100% - (6rem)*3)) / 4 + 2 * 6rem); }
   .row .col-2-of-4 {
     width: calc(2 * ((100% - (6rem)*3) / 4) + 6rem); }
+
+.about-section {
+  height: 100vh;
+  background-color: #F8F8F8; }
