--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -41,3 +41,24 @@ body {
         color: $light-grey-color;
     }
 }
+
+.heading-secondary {
+    font-size: 2rem;
+    margin: 0 auto;
+    color: #414141;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: 400;
+    letter-spacing: .5rem;
+    padding-top: 4rem;
+
+    &::after {
+        content: "";
+        height: .2rem;
+        display: block;
+        margin: 0 auto;
+        margin-top: 1rem;
+        width: 8rem;
+        background-color: $medium-red-wine-color;
+    }
+}
