--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,4 +1,5 @@
 .about-section {
     height: 100vh;
-    background-color: $light-grey-color;
+    background-color: $white-color;
+    position: relative;
 }
