--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -2,10 +2,13 @@
 // COLORS
 $base-color: #777;
 $black-color: #000;
+$white-color: #FFF;
 $light-grey-color: #F8F8F8;
 $medium-grey-color: #7E7E7E;
+$dark-grey-color: #414141;
 $medium-red-wine-color: #ac1e1e;
 $dark-red-wine-color: #600000;
+$medium-orange-color: #fd8a10;
 $transparent-color: transparent;
 
 // GRID
