--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -3,14 +3,14 @@
     &:visited {
         text-decoration: none;
         font-size: 1.4rem;
+        font-weight: 400;
         display: inline-block;
         padding: 1rem 2rem;
         text-transform: uppercase;
         border-radius: 10rem;
-        letter-spacing: .2rem;
+        letter-spacing: .1rem;
         transition: all .3s;
-        background-color: $dark-red-wine-color;
-        opacity: .8;
+        background-color: $medium-orange-color;
     }
 
     &--in-bottom-animated {
@@ -24,12 +24,11 @@
     
     &:hover {
         transform: translateY(-.2rem);
-        opacity: 1;
-        box-shadow: .3rem .4rem 0rem rgba($dark-red-wine-color, 0.2);
+        box-shadow: .3rem .4rem 0rem rgba($black-color, 0.15);
     }
     
     &:active {
         transform: translateY(-.1rem);
-        box-shadow: .3rem .1rem 0rem rgba($dark-red-wine-color, 0.2);
+        box-shadow: .3rem .1rem 0rem rgba($black-color, 0.15);
     }    
 }
