--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,7 +1,8 @@
 .header {
     height: 100vh;
-    background-image: linear-gradient(rgba($black-color, 0.7), rgba($black-color, 0.7)), url(../img/1.jpg);
+    background-image: linear-gradient(rgba($black-color, 0.45), rgba($black-color, 0.45)), url(../img/1.jpg);
     background-size: cover;
+    background-attachment: fixed;
     background-position: center;
     position: relative;
 
@@ -38,15 +39,9 @@
                     letter-spacing: .3rem;
                     font-weight: 400;
                     font-size: 1.4rem;
-                    opacity: .5;
-                    transition: opacity .8s;
                     text-decoration: none;
                     padding: 0rem 1rem;
                 }
-            }
-
-            & li a:hover {
-                opacity: 1;
             }
 
             & li:not(:first-child) {
@@ -66,7 +61,7 @@
                 display: block;
                 width: 100%;
                 height: .1rem;
-                background-color: $light-grey-color;
+                background-color: $white-color;
                 transform: scaleX(0);
                 transform-origin: left;
                 transition: transform .8s;
