--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 @import "base/utilities";
 
 @import "components/button";
+@import "components/card";
 
 @import "layout/header";
 @import "layout/grid";
