--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -8,7 +8,9 @@ $medium-grey-color: #7E7E7E;
 $dark-grey-color: #414141;
 $medium-red-wine-color: #ac1e1e;
 $dark-red-wine-color: #600000;
+$light-orange-color: #FFA342;
 $medium-orange-color: #fd8a10;
+$dark-orange-color: #CB6800;
 $transparent-color: transparent;
 
 // GRID
