--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,9 +1,9 @@
 .header {
     height: 100vh;
-    background-image: linear-gradient(rgba($black-color, 0.45), rgba($black-color, 0.45)), url(../img/1.jpg);
+    background-image: linear-gradient(rgba($black-color, 0.4), rgba($black-color, 0.4)), url(../img/1.jpg);
     background-size: cover;
     background-attachment: fixed;
-    background-position: center;
+    background-position: bottom;
     position: relative;
 
     &--opacity-animated {
@@ -42,6 +42,7 @@
                     text-decoration: none;
                     padding: 0rem 1rem;
                 }
+
             }
 
             & li:not(:first-child) {
@@ -64,7 +65,7 @@
                 background-color: $white-color;
                 transform: scaleX(0);
                 transform-origin: left;
-                transition: transform .8s;
+                transition: transform 1s;
             }
 
             &--border-underliner:hover::after {
