--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -2,9 +2,26 @@
     text-align: center;
 }
 .u-big-margin-bottom {
+    margin-bottom: 8rem;
+}
+
+.u-medium-margin-bottom {
+    margin-bottom: 6rem;
+}
+
+.u-small-margin-bottom {
     margin-bottom: 4rem;
 }
 
 .u-big-margin-top {
+    margin-top: 8rem;
+}
+
+.u-medium-margin-top {
     margin-top: 6rem;
 }
+
+.u-small-margin-top {
+    margin-top: 4rem;
+}
+
