--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -4,7 +4,7 @@ $base-color: #777;
 $black-color: #000;
 $white-color: #FFF;
 $light-grey-color: #F8F8F8;
-$medium-grey-color: #7E7E7E;
+$medium-grey-color: #C9C9C9;
 $dark-grey-color: #414141;
 $medium-red-wine-color: #ac1e1e;
 $dark-red-wine-color: #600000;
